log 'add_subdirectory' and 'include' calls
as a tree where indentation shows nesting.
The result is written to "cmake.tree" in the top build directory.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -592,6 +592,8 @@ set(SRCS
   cmIncludeGuardCommand.h
   cmIncludeRegularExpressionCommand.cxx
   cmIncludeRegularExpressionCommand.h
+  cmIncludeTree.cxx
+  cmIncludeTree.h
   cmInstallCommand.cxx
   cmInstallCommand.h
   cmInstallCommandArguments.cxx
